[package]
name = "esp8266-rust"
version = "0.1.0"
authors = ["Florian Beck <info@florian-beck.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp8266-hal = { version = "0.5.1", optional = true}
esp32-hal = { version = "0.8.0", optional = true }
esp-backtrace = { version = "0.5.0", features = ["esp32", "panic-handler", "print-uart"], optional = true }

esp-println = { version = "0.3.1", features = ["esp8266"]}
xtensa-lx-rt = { version = "0.15.0", features = ["esp8266"], optional = true}

panic-halt = "0.2.0"

[features]
default = ["xtensa-lx-rt", "esp8266-hal", "esp-backtrace"]

[profile.dev.package.xtensa-lx-rt]
opt-level = 'z'