[package]
name = "esp8266-serial-mqtt"
version = "0.1.0"
authors = ["Robert Gawron <you@example.com>"]
edition = "2021"
license = "MIT"

[dependencies]
# HAL for the ESP8266 (keeps the runtime via its "rt" feature)
esp8266-hal = { version = "0.5.1", features = ["rt"] }

# Basic panic handler
panic-halt = "0.2.0"

# Core embedded traits
embedded-hal = "0.2.7"

# Minimal no_std MQTT client (uses embedded-nal / smoltcp etc.)
minimq = "0.10.0"

[features]
default = []

[profile.release]
opt-level = 1
lto = true
codegen-units = 1

[profile.dev]
opt-level = "z"

# Apply extreme optimization specifically to the problematic crates
[profile.dev.package.num-rational]
opt-level = 3

[profile.dev.package.compiler_builtins]
opt-level = 3
